--- a/HTMLTemplates/station.html
+++ b/HTMLTemplates/station.html
@@ -1,8 +1,9 @@
-<html>
-  <head>
-     <title>CheckMeIn</title>
-  </head>
-  <body>
+<%def name="scripts()">
+</%def>
+
+<%def name="title()">CheckMeIn Station</%def>
+<%inherit file="base.html"/>
+
      <CENTER><H1>Welcome to TFI Headquarters</H1>
      <H2><div id="clockbox"></div></H2>
 </H1></CENTER>
@@ -43,7 +44,6 @@
 </TD>
 </TR>
 </table>
-</html> 
 
 <script type="text/javascript">
 tday=new Array("Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday");
