Changes to make smaller logo

--- a/HTMLTemplates/base.html
+++ b/HTMLTemplates/base.html
@@ -43,7 +43,7 @@ function escapeHTML(string) {
 % if error is not UNDEFINED:
 	    <H1 class="error" id="error">${error}</H1>
 % endif
-    <center><IMG ALT="TFI Logo" SRC="static/TFI-logo-Color transparent with tagline June 2017.png" WIDTH="50%"/></center>
+    <center><IMG ALT="TFI Logo" SRC="static/TFI-logo-smaller.png" WIDTH="50%"/></center>
 
         ${self.body()}
     </body>
