--- a/HTMLTemplates/base.html
+++ b/HTMLTemplates/base.html
@@ -38,6 +38,7 @@ function escapeHTML(string) {
 	<head>
 		<link rel="stylesheet" type="text/css" href="static/style.css"/>
 	    <title>${self.title()}</title>
+         <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
     <body>
 % if error is not UNDEFINED:
