--- a/HTMLTemplates/station.html
+++ b/HTMLTemplates/station.html
@@ -27,10 +27,10 @@
 
 </TR></TABLE>
 
-<table style="width:100%">
+<table class="recent" style="width:100%">
 <TR>
 <TD style="width:70%" valign="top">
-  <H2>Recent Activity</H2>
+  <H2>Recent Activity (today)</H2>
   <TABLE style="width:80%">
     <TR><TH>Time</TH><TH>Name</TH><TH>Description</TH></TR>
   % for trans in members.recent(20):
