--- a/HTMLTemplates/station.html
+++ b/HTMLTemplates/station.html
@@ -1,4 +1,7 @@
 <%def name="scripts()">
+<script>
+window.onload = setTimeout(function(){location.href="station"},1000*60*60);  // every hour
+</script>
 </%def>
 <%def name="head()">
 </%def>
