--- a/HTMLTemplates/station.html
+++ b/HTMLTemplates/station.html
@@ -53,11 +53,11 @@ window.onload = setTimeout(function(){location.href="station"},1000*60*60);  // 
   </TR>
   <TR>
     <TH>Keyholder</TH>
-    <TD>N/A Keyholder</TD>
+    <TD>${keyholder_name}</TD>
   </TR>
   <TR>
     <TH>Shop Steward</TH>
-    <TD>N/A Steward</Th> 
+    <TD>${shop_steward_name}</Th> 
   </TR> 
   </table>
 </TD>
