Make changes for SQLoutput only apply to that class of table.

--- a/HTMLTemplates/customSQL.html
+++ b/HTMLTemplates/customSQL.html
@@ -19,7 +19,7 @@ ${sql}
 % for row in data:
 <tr>
   % for datum in row:
-     <td>${datum}</td>
+     <td class="SQLoutput">${datum}</td>
   % endfor
 </tr>
 % endfor
