Don't say e-mail is optional (even though it is...)

--- a/HTMLTemplates/guests.html
+++ b/HTMLTemplates/guests.html
@@ -38,7 +38,7 @@
         <td><input autofocus type="text" name="first" placeholder="First"></td></tr>
       <tr><td>Last Name:</td>
           <td><input type="text" name="last" placeholder="Last"></td></tr>
-      <tr><td>E-mail: (optional)</td>
+      <tr><td>E-mail:</td>
           <td><input type="text" name="email" placeholder="me@mail.com"></td></tr>
       <tr><td>How did you hear about TFI? (optional)</td>
           <td><input type="textarea" name="hear" placeholder="From member X"></td></tr>
