--- a/HTMLTemplates/guests.html
+++ b/HTMLTemplates/guests.html
@@ -1,4 +1,7 @@
 <%def name="scripts()">
+<script>
+window.onload = setTimeout(function(){location.href="guests"},1000*60*10);  // if still here in 10 minutes 
+</script>
 </%def>
 <%def name="head()">
 </%def>
